# qnx_misc

./: CMakeLists.txt  Makefile  README.md
cmake/: toolchain-arm64-qnx.cmake
python/: cpu.py
src/: hello_qnx.cpp  net_speed_client.cpp  net_speed_server.cpp  tcp_speed_server.cpp  udp_speed_receiver.cpp  udp_speed_sender.cpp
